Added Lothaire sounds

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h6><a href="./menu/efc.html"> EFC </a></h6>
       <h6><a href="./menu/pute.html"> PUTE </a></h6>
       <h6><a href="./menu/blunio.html"> BLUNIO </a></h6>
-      <h6><a href="#"> ? </a></h6>
+      <h6><a href="./menu/lothaire.html"> LOTHAIRE </a></h6>
       <h6><a href="#"> ? </a></h6>
       <h6><a href="#"> ? </a></h6>
       <h6><a href="#"> ? </a></h6>
