--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <h6><a href="./menu/pute.html"> PUTE </a></h6>
       <h6><a href="./menu/blunio.html"> BLUNIO </a></h6>
       <h6><a href="./menu/lothaire.html"> LOTHAIRE </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
+      <h6><a href="./menu/alexandreans.html"> ALEXANDRE ANS </a></h6>
+      <h6><a href="./menu/openrafy.html"> OPENRAFY </a></h6>
       <h6><a href="#"> ? </a></h6>
       <h6><a href="#"> ? </a></h6>
       <h6><a href="#"> ? </a></h6>
