--- a/menu/lothaire.html
+++ b/menu/lothaire.html
@@ -25,6 +25,13 @@
           <source src="../son/LOTHAIRE/je peux avoir mon nitro stp.mp3" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
+      </audio>
+      <a></a><hr width="" size="4">
+      <h2>Lothaire : Messagerie V1 : </h2>
+      <audio controls>
+        <source src="../son/LOTHAIRE/lother_messagerie.mp3" type="audio/mpeg">
+        Votre navigateur ne prend pas en charge l'élément audio.
+      </audio>
         <a></a><hr width="" size="4">
         <h2>Lothaire : Messagerie V2 : </h2>
         <audio controls>
@@ -38,7 +45,7 @@
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
-    </center>
+   </center>
     </div>
     <div class="column2">
     <center>
