--- a/menu/efc.html
+++ b/menu/efc.html
@@ -228,9 +228,9 @@
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
-        <h2>EFC : </h2>
+        <h2>EFC : Appel chez les Chabot </h2>
         <audio controls>
-          <source src="../son/EFC/EFC-" type="audio/mpeg">
+          <source src="../son/EFC/RaidChabotLegende_en_sueur.mp3" type="audio/mpeg">
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
