--- a/index.html
+++ b/index.html
@@ -7,67 +7,7 @@
     <title>Menu-Son-Board</title>
 </head>
 <body>
-
-  <div class="container">
-    <div class="column1">
-      <h6><a href="./menu/efc.html"> EFC </a></h6>
-      <h6><a href="./menu/pute.html"> PUTE </a></h6>
-      <h6><a href="./menu/blunio.html"> BLUNIO </a></h6>
-      <h6><a href="./menu/lothaire.html"> LOTHAIRE </a></h6>
-      <h6><a href="./menu/alexandreans.html"> ALEXANDRE ANS </a></h6>
-      <h6><a href="./menu/openrafy.html"> OPENRAFY </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-    </div>
-    <div class="column2">
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-    </div>
-    <div class="column3">
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-    </div>
-    <div class="column4">
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-    </div>
-    <div class="column5">
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
-      <h6><a href="#"> ? </a></h6>
+      <h6><a href="../pagegen.html"> ACCEDER A LA PAGE </a></h6>
     </div>
 </body>
 </html>
