--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Menu-Son-Board</title>
+    <title>Menu-Son-Board-general</title>
 </head>
 <body>
-      <h6><a href="../pagegen.html"> ACCEDER A LA PAGE </a></h6>
+  <p><b>Bienvenue sur le site de la Soundboard Linuxienne !</b></p>
+  <IMG SRC="./gif/roulio.gif"> 
+   <IMG SRC="./gif/tutula.gif">
+    <p><b>On est le couple Huillet, faites ce qu'on vous dis !</b></p>   
+  <h6><a href="./page.html"> ACCEDER A LA PAGE </a></h6>
     </div>
 </body>
 </html>
