--- a/menu/blunio.html
+++ b/menu/blunio.html
@@ -12,7 +12,7 @@
     <div class="column1">
     <center>
         <br>
-        <h6><a href="../index.html"> Menu </a></h6>
+        <h6><a href="../page.html"> Menu </a></h6>
         <a></a><hr width="" size="4">
         <h2>Blunio : </h2>
         <audio controls>
