--- a/menu/lothaire.html
+++ b/menu/lothaire.html
@@ -12,7 +12,7 @@
     <div class="column1">
     <center>
         <br>
-        <h6><a href="../index.html"> Menu </a></h6>
+        <h6><a href="../page.html"> Menu </a></h6>
         <a></a><hr width="" size="4">
         <h2>Lothaire : Frerot j'ai 2 Invites : </h2>
         <audio controls>
@@ -45,6 +45,14 @@
           Votre navigateur ne prend pas en charge l'élément audio.
         </audio>
         <a></a><hr width="" size="4">
+      </audio>
+      <a></a><hr width="" size="4">
+      <h2>Lothaire : Messagerie V1 : </h2>
+      <audio controls>
+        <source src="../son/LOTHAIRE/lother_messagerie.mp3" type="audio/mpeg">
+        Votre navigateur ne prend pas en charge l'élément audio.
+      </audio>
+      <a></a><hr width="" size="4">
    </center>
     </div>
     <div class="column2">
