--- a/page.html
+++ b/page.html
@@ -10,13 +10,13 @@
 
   <div class="container">
     <div class="column1">
-      <h6><a href="./menu/efc.html"> EFC </a></h6>
+      <h6><a href="./index.html"> MENU PRINCIPAL </a></h6>
       <h6><a href="./menu/pute.html"> PUTE </a></h6>
       <h6><a href="./menu/blunio.html"> BLUNIO </a></h6>
       <h6><a href="./menu/lothaire.html"> LOTHAIRE </a></h6>
       <h6><a href="./menu/alexandreans.html"> ALEXANDRE ANS </a></h6>
       <h6><a href="./menu/openrafy.html"> OPENRAFY </a></h6>
-      <h6><a href="#"> ? </a></h6>
+      <h6><a href="./menu/efc.html"> EFC </a></h6>
       <h6><a href="#"> ? </a></h6>
       <h6><a href="#"> ? </a></h6>
       <h6><a href="#"> ? </a></h6>
